force-app/main/default/objects/GSA_Bill_Rate__c/GSA_Bill_Rate__c.object-meta.xml
<CustomObject>
    <label>GSA Bill Rate</label>
    <nameField>
        <displayFormat>GSA-BR-{0000000000}</displayFormat>
        <label>GSA Bill Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Bill Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>