force-app/main/default/objects/GSA_Bill_Rate__c/fields/Annual_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Bill_Rate__c</fullName>
    <label>Annual Bill Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>