force-app/main/default/objects/GSA_Bill_Rate__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GSA Bill Rates</relationshipLabel>
    <relationshipName>GSA_Bill_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>