force-app/main/default/objects/GSA_Bill_Rate__c/fields/Hourly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Bill_Rate__c</fullName>
    <formula>Annual_Bill_Rate__c/ 2080</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>