force-app/main/default/objects/GSA_Bill_Rate__c/fields/Monthly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bill_Rate__c</fullName>
    <formula>Annual_Bill_Rate__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>